2002-01-29  Larry Jones  <larry.jones@sdrc.com>

	* server.c (serve_root): If the specified root doesn't match the
	pserver root, return before changing current_parsed_root to prevent
	subsequent commands from accessing an unchecked root directory.
	(server_init): Check specified root against the pserver root and
	complain if they don't match.  Also, if there are pending errors,
	print them and return before changing current_parsed_root to prevent
	subsequent commands from accessing an unchecked root directory.
	* sanity.sh (pserver): New tests for above.

2002-01-10  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_version_requested): Change :: in revision spec to be
	exclusive just on the low end (so -r tag1::tag2 gives revisions
	after tag1 but up to and including tag2), which is much more useful
	than the previous (exclusive at both ends) behavior.
	(log_usage): Update to match.
	* sanity.sh (log): Update to match.

2002-01-02  Larry Jones  <larry.jones@sdrc.com>

	* server.c (LOG_DAEMON): Define if needed.
	(Patch from John David Anglin <dave@hiauly1.hia.nrc.ca>.)

	* server.c (pserver_authenticate_connection): Add a specific error
	message for EOF at protocol start and syslog if available.
	* sanity.sh (pserver-bufinit): Update to match.

2001-12-10  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_usage): Note that -r and -d take lists, not just a
	single specification.
	(log_expand_revlist): Don't dereference null pointers when one end
	of a revision range is a non-existent tag.

2001-12-03  Larry Jones  <larry.jones@sdrc.com>

	* annotate.c (annotate, annotate_fileproc): Don't annotate binary
	files unless new -F option given.
	* sanity.sh (basica, ann, ann-id, rcs, keywordlog, tagdate): Update
	to match.

2001-11-30  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin): Allow unrestricted usage of -q in addition to -k.

2001-10-25  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_expand_revlist): Make erroneous or inconsistent revision