@@ -32,8 +32,9 @@
 /* The __-protected variants of `format' and `printf' attributes
    are accepted by gcc versions 2.6.4 (effectively 2.7) and later.  */
 # if __GNUC__ < 2 || (__GNUC__ == 2 && __GNUC_MINOR__ < 7)
-#  define __format__ format
-#  define __printf__ printf
+#  define __format__	format
+#  define __printf__	printf
+#  define __noreturn__	noreturn
 # endif
 #endif
 
@@ -46,7 +47,11 @@ void error ();
 
 /* Exit due to an error.  Similar to error (1, 0, "message"), but call
    it in the case where the message has already been printed.  */
-extern void error_exit PROTO ((void));
+#ifdef __STDC__
+void error_exit (void) __attribute__ ((__noreturn__));
+#else
+void error_exit (void);
+#endif
 
 /* If non-zero, error will use the CVS protocol to report error
    messages.  This will only be set in the CVS server parent process;
